Fix lock icon being visible all the time on all fields and widgets

--- a/assets/css/scss/admin-views.scss
+++ b/assets/css/scss/admin-views.scss
@@ -1632,12 +1632,14 @@ hr {
 	.dashicons {
 		display: none;
 	}
+
 	.dashicons-welcome-write-blog,
 	.dashicons-trash,
 	.dashicons-controls-repeat,
 	.dashicons-admin-comments,
 	.dashicons-yes-alt,
 	.dashicons-editor-code,
+	.dashicons-lock,
 	.dashicons-media-default,
 	.dashicons-admin-links {
 		display: inline-block;
